--- a/experiment/face_mask_detection_v3.ipynb
+++ b/experiment/face_mask_detection_v3.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPQN2OKi7LzI51gfd0V7JKG",
+      "authorship_tag": "ABX9TyNTGF/rZuyaxgw1G1ZEv4QL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2715,7 +2715,7 @@
         "id": "Z9lUPNipTmzk"
       },
       "source": [
-        "## Annotate based on the output from the model with ResNet34"
+        "## Annotate based on the output from the model with VGG19"
       ]
     },
     {
